# match-me-if-you-can

./: .gitignore  Cargo.toml  README.md
crates/mmiyc-air/: Cargo.toml
crates/mmiyc-air/src/: age.rs  country.rs  email.rs  income.rs  lib.rs  postcode.rs
crates/mmiyc-bench/: Cargo.toml
crates/mmiyc-bench/src/: main.rs
crates/mmiyc-population/: Cargo.toml
crates/mmiyc-population/src/: attributes.rs  breach.rs  generate.rs  io.rs  lib.rs  regulatory.rs
crates/mmiyc-prover/: Cargo.toml
crates/mmiyc-prover/src/: lib.rs  ml_dsa_pok.rs
crates/mmiyc-server/: Cargo.toml
crates/mmiyc-server/src/: at_rest.rs  db.rs  lib.rs  main.rs  ml_dsa.rs  router.rs
crates/mmiyc-server/tests/: integration.rs
crates/mmiyc-verifier/: Cargo.toml
crates/mmiyc-verifier/examples/: client_verify_v2.rs  v15_bench.rs
crates/mmiyc-verifier/src/: lib.rs  ml_dsa_pok.rs
crates/mmiyc-wasm/: Cargo.toml
crates/mmiyc-wasm/src/: lib.rs
docs/: demo-walkthrough.md  ml_dsa_air_plan.md  ml_dsa_v2_roadmap.md  threat-model.md
docs/paper/: Makefile  paper.tex  refs.bib
frontend/: index.html
scripts/: build-wasm.sh  run-demo.sh  wasm-bench-node.mjs
