[package]
name        = "mmiyc-population"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Synthetic user populations + breach-simulation harness"

[dependencies]
serde      = { workspace = true }
serde_json = { workspace = true }
rand       = { workspace = true }
hex        = { workspace = true }
sha3       = { workspace = true }
anyhow     = { workspace = true }
thiserror  = { workspace = true }

# CSV — use a small dedicated crate so the data format is portable
# and easy to inspect.
csv = "1.3"

[dev-dependencies]
proptest = { workspace = true }
