[package]
name        = "mmiyc-server"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "axum HTTP service for Match-Me-If-You-Can: /register, /verify-*"

[[bin]]
name = "mmiyc-server"
path = "src/main.rs"

[dependencies]
mmiyc-air      = { path = "../mmiyc-air" }
mmiyc-prover   = { path = "../mmiyc-prover" }
mmiyc-verifier = { path = "../mmiyc-verifier" }

axum       = { workspace = true }
tokio      = { workspace = true }
tower      = { workspace = true }
tower-http = { workspace = true }

serde      = { workspace = true }
serde_json = { workspace = true }
hex        = { workspace = true }
sha3       = { workspace = true }

tracing            = { workspace = true }
tracing-subscriber = { workspace = true }

anyhow     = { workspace = true }
thiserror  = { workspace = true }

# Storage — PostgreSQL via sqlx, or SQLite for tests.
sqlx = { workspace = true }

[dev-dependencies]
tempfile = "3"
