[package]
name        = "mmiyc-server"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "axum HTTP service for Match-Me-If-You-Can: /register, /verify-*"

[[bin]]
name = "mmiyc-server"
path = "src/main.rs"

[dependencies]
mmiyc-air      = { path = "../mmiyc-air" }
mmiyc-prover   = { path = "../mmiyc-prover" }
mmiyc-verifier = { path = "../mmiyc-verifier" }

axum       = { workspace = true }
tokio      = { workspace = true }
tower      = { workspace = true }
tower-http = { workspace = true }

serde      = { workspace = true }
serde_json = { workspace = true }
hex        = { workspace = true }
sha3       = { workspace = true }
rand       = { workspace = true }

# Service identity — RSA-2048 signing key for the income-proof
# designated-verifier gate.  /verify/income responses include a
# STARK PoK (via mmiyc_prover::prove_rsa_pok) attesting the
# operator knows `sk_rsa` for `pk_rsa = (n, e=65537)` on the
# message that binds (nonce ‖ proof ‖ policy).  Without sk_rsa an
# exfiltrated DB cannot fabricate the PoK, and the FRI low-degree
# test rejects any forgery attempt.
rsa     = "0.9"
sha2    = { version = "0.10", features = ["oid"] }
# At-rest encryption of the income proof: RSA-OAEP wraps a fresh
# AES-256-GCM key per row, then AES-GCM encrypts the proof bytes.
# An attacker holding the DB but not `sk_rsa` cannot recover the
# proof bytes, so they can't even feed them to a STARK verifier —
# the strongest form of the designated-verifier claim.
aes-gcm = "0.10"

tracing            = { workspace = true }
tracing-subscriber = { workspace = true }

anyhow     = { workspace = true }
thiserror  = { workspace = true }

# Storage — PostgreSQL via sqlx, or SQLite for tests.
sqlx = { workspace = true }

[dev-dependencies]
tempfile = "3"
rand     = { workspace = true }
