[package]
name        = "mmiyc-server"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "axum HTTP service for Match-Me-If-You-Can: /register, /verify-*"

[[bin]]
name = "mmiyc-server"
path = "src/main.rs"

[features]
# Forward ml_dsa parameter set from deep_ali.  Exactly one must be active;
# default = mldsa-65 (NIST PQ Level 3, paper-aligned demo default).
# Switch by editing the workspace Cargo.toml's deep_ali features list
# (this crate's feature follows along via workspace dependency activation).
default  = ["mldsa-65"]
mldsa-44 = []
mldsa-65 = []
mldsa-87 = []

[dependencies]
mmiyc-air      = { path = "../mmiyc-air" }
mmiyc-prover   = { path = "../mmiyc-prover" }
mmiyc-verifier = { path = "../mmiyc-verifier" }
# Direct read of `stark_level::*` and `ml_dsa::params::*` constants
# for the `/service/scheme` endpoint.  Inherits the workspace
# feature set (parallel + sha3-N + mldsa-N) so the constants match
# the active build.
deep_ali       = { workspace = true }

axum       = { workspace = true }
tokio      = { workspace = true }
tower      = { workspace = true }
tower-http = { workspace = true }

serde      = { workspace = true }
serde_json = { workspace = true }
hex        = { workspace = true }
sha3       = { workspace = true }
rand       = { workspace = true }

# Service identity — RSA-2048 signing key for the income-proof
# designated-verifier gate.  /verify/income responses include a
# STARK PoK (via mmiyc_prover::prove_rsa_pok) attesting the
# operator knows `sk_rsa` for `pk_rsa = (n, e=65537)` on the
# message that binds (nonce ‖ proof ‖ policy).  Without sk_rsa an
# exfiltrated DB cannot fabricate the PoK, and the FRI low-degree
# test rejects any forgery attempt.
rsa     = "0.9"
sha2    = { version = "0.10", features = ["oid"] }
# At-rest encryption of the income proof: RSA-OAEP wraps a fresh
# AES-256-GCM key per row, then AES-GCM encrypts the proof bytes.
# An attacker holding the DB but not `sk_rsa` cannot recover the
# proof bytes, so they can't even feed them to a STARK verifier —
# the strongest form of the designated-verifier claim.
aes-gcm = "0.10"

# Post-quantum signature primitive (FIPS 204, ML-DSA-44 = NIST
# security category 2 / "level 1") for the next-generation gate.
# Currently used only by tests; the production gate is still
# RSASSA-PKCS#1 v1.5 — the AIR for ML-DSA verify is a multi-session
# project (see docs/ml_dsa_air_plan.md).
ml-dsa    = "0.1.0-rc.9"
# ml-dsa pins rand_core = 0.10, which dropped its built-in
# `OsRng`.  The official replacement is `getrandom::SysRng` under
# the `sys_rng` feature (see ml-dsa's own usage example).
getrandom = { version = "0.4", features = ["sys_rng"] }

tracing            = { workspace = true }
tracing-subscriber = { workspace = true }

anyhow     = { workspace = true }
thiserror  = { workspace = true }

# Storage — PostgreSQL via sqlx, or SQLite for tests.
sqlx = { workspace = true }

[dev-dependencies]
tempfile = "3"
rand     = { workspace = true }
