[package]
name        = "mmiyc-verifier"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Native STARK proof verification for Match-Me-If-You-Can"

[dependencies]
mmiyc-air = { path = "../mmiyc-air" }

deep_ali       = { workspace = true }
ark-ff         = { workspace = true }
ark-goldilocks = { workspace = true }

serde         = { workspace = true }
thiserror     = { workspace = true }
anyhow        = { workspace = true }
ark-serialize = { workspace = true }
sha3          = { workspace = true }

[dev-dependencies]
mmiyc-prover = { path = "../mmiyc-prover" }
