[package]
name        = "mmiyc-verifier"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Native STARK proof verification for Match-Me-If-You-Can"

[dependencies]
mmiyc-air = { path = "../mmiyc-air" }

deep_ali       = { workspace = true }
ark-ff         = { workspace = true }
ark-goldilocks = { workspace = true }

serde         = { workspace = true }
thiserror     = { workspace = true }
anyhow        = { workspace = true }
ark-serialize = { workspace = true }
sha3          = { workspace = true }

# RSA-2048 PoK verifier — see mirror dep in mmiyc-prover.
sha2 = "0.10"

[dev-dependencies]
mmiyc-prover = { path = "../mmiyc-prover" }
# Real RSA-2048 keypair for the round-trip test of
# `prove_rsa_pok` / `verify_rsa_pok`.  sha2's `oid` feature is
# required by rsa's PKCS#1 v1.5 SignerKey<Sha256> wiring.
rsa  = "0.9"
rand = { workspace = true }
sha2 = { version = "0.10", features = ["oid"] }
